--- a/langoal/langoal/src/main/resources/templates/TutorSettings.html
+++ b/langoal/langoal/src/main/resources/templates/TutorSettings.html
@@ -67,49 +67,53 @@
         <div class="container">
             <!-- USER SETTINGS -->
             <div class="row">
-                <ul class="col d-flex flex-column user-settings">
-<!--                    <div class="d-flex flex-row justify-content-between">-->
-<!--                        <li>-->
-<!--                            <i class="fa-solid fa-credit-card"></i>-->
-<!--                            Payment method-->
-<!--                        </li>-->
-<!--                        <button class="btnMethod">-->
-<!--                            <a th:href="@{/payment}" class="nav-link align-middle px-0">select payment method</a>-->
-<!--                        </button>-->
-<!--                    </div>-->
+                <form method="post" th:action="@{updatesettings}">
+                    <ul class="col d-flex flex-column user-settings" th:each="p:${listUsers}">
+                        <div class="d-flex flex-row justify-content-between">
+                            <li>
+                                <i class="fa-solid fa-credit-card"></i>
+                                Payment method
+                            </li>
+                        </div>
 
-                    <div class="d-flex flex-row justify-content-between">
-                        <li>
-                            <i class="fa-solid fa-key"></i>
-                            Change password
-                        </li>
+                        <div class="d-flex flex-row justify-content-between">
+                            <li>
+                                <i class="fa-solid fa-key"></i>
+                                Change password
+                            </li>
+                            <label class="formLabels">password</label>
+                            <input type="password" class="form-control" name="password" th:value="${tutor.password}"/>
+                            <span th:errors="${tutor.password}"></span>
+                        </div>
 
-                        <button class="btnLogin">
-                            <a th:href="@{/passwordchange}" class="nav-link align-middle px-0">Change your password</a>
-                        </button>
-                    </div>
+                        <div class="d-flex flex-row justify-content-between">
+                            <li>
+                                <i class="fa-solid fa-users-gear"></i>
+                                Change user name
+                            </li>
+                            <label class="formLabels">Username</label>
+                            <input type="text" class="form-control" name="firstname" th:value="${tutor.firstname}"/>
+                            <span th:errors="${tutor.firstname}"></span>
+                        </div>
 
-                    <div class="d-flex flex-row justify-content-between">
-                        <li>
-                            <i class="fa-solid fa-users-gear"></i>
-                            Change username
-                        </li>
+                        <div class="d-flex flex-row justify-content-between">
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                Change email
+                            </li>
+                            <label class="formLabels">Email</label>
+                            <input type="email" class="form-control" name="email" th:value="${tutor.email}"/>
+                            <span th:errors="${tutor.email}"></span>
+                        </div>
 
-                        <button class="btnUsername">
-                            <a th:href="@{/username}" class="nav-link align-middle px-0">Change your username</a>
-                        </button>
-                    </div>
-                    <div class="d-flex flex-row justify-content-between">
-                        <li>
-                            <i class="fa-solid fa-user-slash"></i>
-                            Delete Account
-                        </li>
-
-                        <button class="btnForgot">
-                            <a th:href="@{/deleteaccount}" class="nav-link align-middle px-0">Delete Account</a>
-                        </button>
-                    </div>
-                </ul>
+                        <div class="dsp-flex mb-5">
+                            <button class="btnForgot">Delete Account</button>
+                        </div>
+                        <div class="dsp-flex mt-5">
+                            <button type="submit" class="btnLogin">Update Account</button>
+                        </div>
+                    </ul>
+                </form>
             </div>
 
         </div>
