--- a/langoal/langoal/src/main/resources/templates/FindTutor.html
+++ b/langoal/langoal/src/main/resources/templates/FindTutor.html
@@ -72,7 +72,7 @@
                 </a>
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link align-middle px-0">
+                <a th:href="@{/chat}" class="nav-link align-middle px-0">
                     <i class="fa-solid fa-comments"></i>
                     <span class="nav-label">CHATS</span>
                 </a>
