--- a/langoal/langoal/src/main/resources/templates/UserAccount.html
+++ b/langoal/langoal/src/main/resources/templates/UserAccount.html
@@ -41,6 +41,19 @@
               <span class="nav-label">GET PREMIUM</span>
             </a>
           </li>
+
+          <li class="nav-item mb-2">
+            <a th:href="@{/chat}" class="nav-link align-middle px-0">
+              <i class="fa-solid fa-comments"></i>
+              <span class="nav-label">CHATS</span>
+            </a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="#" class="nav-link align-middle px-0">
+              <i class="fa-regular fa-calendar-check"></i>
+              <span class="nav-label">BOOK SESSION</span>
+            </a>
+          </li>
           <li class="nav-item mb-2">
             <a th:href="@{/settingsverification}" class="nav-link align-middle px-0">
               <i class="fa-solid fa-gear"></i>
@@ -63,14 +76,11 @@
       <div class="container">
         <!-- USER ACCOUNT INFO -->
         <div class="user-container mt-5 p-4">
-<<<<<<< HEAD
           <div class="row mt-2">
             <div class="col d-flex justify-content-center">
               <p class="text-center main-page-p mb-4">Hey userName!</p>
             </div>
           </div>
-=======
->>>>>>> 11ac5c2cee0433216dc5dc5fba88c2abbe31cd8a
 
           <div class="row mb-2">
             <div class="col d-flex justify-content-center">
@@ -116,11 +126,8 @@
 
         </div>
 
-<<<<<<< HEAD
         <div class="user-container mt-5 mb-5 p-4">
-=======
         <div class="user-container mt-5 p-4 mb-30">
->>>>>>> 11ac5c2cee0433216dc5dc5fba88c2abbe31cd8a
           <div class="row mb-2">
             <h2 class="main-page-h">CONFIRM SESSION</h2>
           </div>
