--- a/langoal/langoal/src/main/resources/templates/UserSettings.html
+++ b/langoal/langoal/src/main/resources/templates/UserSettings.html
@@ -45,6 +45,19 @@
                           <span class="nav-label">GET PREMIUM</span>
                       </a>
                   </li>
+
+                  <li class="nav-item mb-2">
+                      <a th:href="@{/chat}" class="nav-link align-middle px-0">
+                          <i class="fa-solid fa-comments"></i>
+                          <span class="nav-label">CHATS</span>
+                      </a>
+                  </li>
+                  <li class="nav-item mb-2">
+                      <a href="#" class="nav-link align-middle px-0">
+                          <i class="fa-regular fa-calendar-check"></i>
+                          <span class="nav-label">BOOK SESSION</span>
+                      </a>
+                  </li>
                   <li class="nav-item mb-2">
                       <a th:href="@{/settingsverification}" class="nav-link align-middle px-0">
                           <i class="fa-solid fa-gear"></i>
