preparing for deployment

--- a/langoal/langoal/src/main/resources/static/css/style.css
+++ b/langoal/langoal/src/main/resources/static/css/style.css
@@ -239,6 +239,7 @@ h1,h2,h3,h4,h5,h6,p,label {
     background-color: var(--sideBar);
     text-decoration: none !important;
     font-family: 'Quicksand';
+    padding: 5px 10px 5px 10px !important;
 }
 
 .btnChat:hover {
