--- a/langoal/langoal/src/main/resources/templates/Payment.html
+++ b/langoal/langoal/src/main/resources/templates/Payment.html
@@ -15,12 +15,12 @@
             <p>Enter your card information</p>
             <div class="bgModal">
                 <form method="post" th:action="@{pay}">
-                    <label class="formLabels">Accepted Cards</label>
-                    <div>
-                        <i class="fa-brands fa-cc-visa"></i>
-                        <i class="fa-brands fa-cc-amex"></i>
-                        <i class="fa-brands fa-cc-mastercard"></i>
-                    </div>
+<!--                    <label class="formLabels">Accepted Cards</label>-->
+<!--                    <div>-->
+<!--                        <i class="fa-brands fa-cc-visa"></i>-->
+<!--                        <i class="fa-brands fa-cc-amex"></i>-->
+<!--                        <i class="fa-brands fa-cc-mastercard"></i>-->
+<!--                    </div>-->
                     <div class="form-group">
                         <label class="formLabels">
                             total
