--- a/langoal/langoal/src/main/resources/templates/TutorSettings.html
+++ b/langoal/langoal/src/main/resources/templates/TutorSettings.html
@@ -53,7 +53,7 @@
                       </a>
                   </li>
                   <li class="nav-item mb-2">
-                      <a href="#" class="nav-link align-middle px-0">
+                      <a th:href="@{/findtutor}" class="nav-link align-middle px-0">
                           <i class="fa-regular fa-calendar-check"></i>
                           <span class="nav-label">BOOK SESSION</span>
                       </a>
