--- a/langoal/langoal/src/main/resources/templates/PremiumAccount.html
+++ b/langoal/langoal/src/main/resources/templates/PremiumAccount.html
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link align-middle px-0">
+            <a th:href="@{/findtutor}" class="nav-link align-middle px-0">
               <i class="fa-regular fa-calendar-check"></i>
               <span class="nav-label">BOOK SESSION</span>
             </a>
@@ -76,85 +76,53 @@
       <div class="container">
         <!-- USER ACCOUNT INFO -->
         <div class="user-container mt-5 p-4">
-          <div class="row mt-2">
-            <div class="col d-flex justify-content-center">
-              <p class="text-center main-page-p mb-4">Hey userName!</p>
-            </div>
-          </div>
-
-          <div class="row mb-2">
-            <div class="col d-flex justify-content-center">
-              <img class="user_img" src="img/userPhoto.png" alt="">
-            </div>
-          </div>
-
-
-          <div class="row mb-2">
-            <h2 class="main-page-h">MY LANGUAGES</h2>
-          </div>
-
-          <div class="row mb-2">
-            <ul class="list_languages d-flex flex-row">
-              <li>
-                <img src="img/china-flag.png" alt="">
-              </li>
-              <li>
-                <img src="img/london-flag.png" alt="">
-              </li>
-              <li>
-                <img src="img/plus.png" alt="">
-              </li>
-            </ul>
-
-          </div>
 
           <div class="row">
             <div class="col d-flex flex-column">
               <h2 class="main-page-h">ACCOUNT TYPE</h2>
-              <p class="main-page-p">Standart</p>
+              <p class="main-page-p">Standard</p>
             </div>
             <div class="col d-flex flex-column">
               <h2 class="main-page-h">GET PREMIUM </h2>
-              <div class="d-flex flex-row justify-content-start">
-                <p class="main-page-p align-self-center">Get rid of the ads </p>
-                <a th:href="@{/payment}">Become a Premium User</a>
+              <div class="dsp-flex">
+                <a th:href="@{/payment}" class="nav-link btnLogin d-flex align-items-center justify-content-center">Become a Premium User and Get rid of the ads</a>
               </div>
             </div>
           </div>
 
         </div>
 
-        <div class="user-container mt-5 p-4 mb-30">
-          <div class="row mb-2">
-            <h2 class="main-page-h">CONFIRM SESSION</h2>
-          </div>
-          <div class="row">
-            <div class="col-8 d-flex">
-              <div class="col-3">
-                <img class="tutor_img" src="img/userPhoto.png" alt="">
-              </div>
-              <div class="col d-flex flex-column justify-content-center">
+<!--        <div class="user-container mt-5 p-4 mb-30">-->
+<!--          <div class="row mb-2">-->
+<!--            <h2 class="main-page-h">CONFIRM SESSION</h2>-->
+<!--          </div>-->
+<!--          <div class="row">-->
+<!--            <div class="col-8 d-flex">-->
+<!--              <div class="col-3">-->
+<!--                <img class="tutor_img" src="img/userPhoto.png" alt="">-->
+<!--              </div>-->
+<!--              <div class="col d-flex flex-column justify-content-center">-->
 
-                <p class="main-page-p">tutorName</p>
-                <p>+1 62 563 2888</p>
+<!--                <p class="main-page-p">tutorName</p>-->
+<!--                <p>+1 62 563 2888</p>-->
 
-              </div>
-              <div class="col  align-self-center">
-                <p>$49</p>
-              </div>
+<!--              </div>-->
+<!--              <div class="col  align-self-center">-->
+<!--                <p>$49</p>-->
+<!--              </div>-->
 
-            </div>
+<!--            </div>-->
 
 
-            <div class="col-4 d-flex align-self-center">
+<!--            <div class="col-4 d-flex align-self-center">-->
 
-              <button type="button" class="btn-confirm">Confirm</button>
-              <button type="button" class="btn-report">Report</button>
+<!--              <button type="button" class="btn-confirm">Confirm</button>-->
+<!--              <button type="button" class="btn-report">Report</button>-->
 
-            </div>
-          </div>
+<!--            </div>-->
+<!--          </div>-->
 
-        </div>
+<!--        </div>-->
 
       </div>
     </div>
